Fix overflow, update CSS, add multi-floor support
Fix overflowing of text box by moving the box, fixed the SVG from being too large to fit on screen, and set up multi floor map generation.

--- a/static/css/svg_output_page.css
+++ b/static/css/svg_output_page.css
@@ -75,3 +75,10 @@
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px;
 }
+
+#svg-container svg {
+    max-width: 80%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
